fix some gap

--- a/src/components/ProfilePopup/ProfilePopup.scss
+++ b/src/components/ProfilePopup/ProfilePopup.scss
@@ -12,6 +12,7 @@
     padding: 0;
     margin: 0;
     width: 100%;
+    gap: 5px;
 
     a {
       box-sizing: border-box;
